--- a/React.js/FDS_React/1.7_List_&_Key.md
+++ b/React.js/FDS_React/1.7_List_&_Key.md
@@ -47,15 +47,16 @@ ReactDOM.render(<ul>{listItems}</ul>, document.getElementById("root"));
 
 ```js
 function NumberList(props) {
-    const numbers = props.numbers;
-    const listItems = numbers.map(number => <li>{number}</li>);
-    return <ul>{listItems}</ul>;
+  const numbers = props.numbers;
+  const listItems = numbers.map(number => <li>{number}</li>);
+  return <ul>{listItems}</ul>;
 }
 
 const numbers = [1, 2, 3, 4, 5];
-ReactDOM.render(<NumberList numbers={numbers}/>, document.getElementById(
-    "root"
-));
+ReactDOM.render(
+  <NumberList numbers={numbers} />,
+  document.getElementById("root")
+);
 ```
 
 이 코드를 실행하면, 목록의 각 항목에 키를 넣어야한다는 경고가 표시됩니다.<br>
@@ -66,17 +67,18 @@ numbers.map() 안에서 각 항목에 key 를 할당하여 키 관련 경고를 
 
 ```js
 function NumberList(props) {
-    const numbers = props.numbers;
-    const listItems = numbers.map(
-        number => (<li key={number.toString()}>{number}</li>)
-    );
-    return <ul>{listItems}</ul>;
+  const numbers = props.numbers;
+  const listItems = numbers.map(number => (
+    <li key={number.toString()}>{number}</li>
+  ));
+  return <ul>{listItems}</ul>;
 }
 
 const numbers = [1, 2, 3, 4, 5];
-ReactDOM.render(<NumberList numbers={numbers}/>, document.getElementById(
-    "root"
-));
+ReactDOM.render(
+  <NumberList numbers={numbers} />,
+  document.getElementById("root")
+);
 ```
 
 ```js
@@ -85,35 +87,36 @@ ReactDOM.render(<NumberList numbers={numbers}/>, document.getElementById(
 // key를 주게되면 React는 정확히 어느 요소를 변경해야할지 알게되므로 의도한 대로 작동합니다.
 // 하지만 key를 안주면 React는 정확히 어느 요소를 변경해야할지 모르므르 배열의 마지막 요소를 삭제합니다.
 
-
 class NumberList extends React.Component {
-    state = {
-        numbers: [1, 2, 3, 4, 5]
-    };
-    render() {
-        const numbers = this.state.numbers;
-        const listItems = numbers.map((number, index) => (
-            <div key={number}>
-                <span>{number}</span>
-                <input type="text"/>
-                <button
-                    onClick={e => {
-                        this.setState({
-                            numbers: numbers.filter((item, i) => i !== index)
-                        });
-                    }}>
-                    삭제
-                </button>
-            </div>
-        ));
-        return <ul>{listItems}</ul>;
-    }
+  state = {
+    numbers: [1, 2, 3, 4, 5]
+  };
+  render() {
+    const numbers = this.state.numbers;
+    const listItems = numbers.map((number, index) => (
+      <div key={number}>
+        <span>{number}</span>
+        <input type="text" />
+        <button
+          onClick={e => {
+            this.setState({
+              numbers: numbers.filter((item, i) => i !== index)
+            });
+          }}
+        >
+          삭제
+        </button>
+      </div>
+    ));
+    return <ul>{listItems}</ul>;
+  }
 }
 
 const numbers = [1, 2, 3, 4, 5];
-ReactDOM.render(<NumberList numbers={numbers}/>, document.getElementById(
-    "root"
-));
+ReactDOM.render(
+  <NumberList numbers={numbers} />,
+  document.getElementById("root")
+);
 ```
 
 <br>
@@ -129,39 +132,33 @@ ReactDOM.render(<NumberList numbers={numbers}/>, document.getElementById(
 
 ```js
 const numbers = [1, 2, 3, 4, 5];
-const listItems = numbers.map(
-    number => (<li key={number.toString()}>{number}</li>)
-);
+const listItems = numbers.map(number => (
+  <li key={number.toString()}>{number}</li>
+));
 ```
 
 키로 쓰기에 가장 적절한 값은 각 항목을 고유하게 식별할 수 있는 문자열입니다.<br>
 대부분의 경우 데이터의 ID 를 키로 사용합니다.
 
 ```js
-const todoItems = todos.map((todo) =>
-  <li key={todo.id}>
-    {todo.text}
-  </li>
-);
+const todoItems = todos.map(todo => <li key={todo.id}>{todo.text}</li>);
 ```
 
 만약 그러한 값이 없다면, 최후의 수단으로 배열 인덱스를 키로 사용할 수도 있습니다.<br>
 
 ```js
-const todoItems = todos.map((todo, index) =>
+const todoItems = todos.map((todo, index) => (
   // Only do this if items have no stable IDs
-  <li key={index}>
-    {todo.text}
-  </li>
-);
+  <li key={index}>{todo.text}</li>
+));
 ```
 
 항목 간 순서가 바뀔 수 있는 경우 키에 인덱스를 사용하지 않는 게 좋습니다.<br>
-이로 인해 성능이 저하되거나 컴포넌트의 state와 관련된 문제가 생길 수 있습니다.<br>
-Robin Pokorny가 작성한 아티클인 in-depth explanation on the negative impacts of using an index as a key 를 참고하시길 바랍니다.<br>
+이로 인해 성능이 저하되거나 컴포넌트의 state 와 관련된 문제가 생길 수 있습니다.<br>
+Robin Pokorny 가 작성한 아티클인 in-depth explanation on the negative impacts of using an index as a key 를 참고하시길 바랍니다.<br>
 [https://medium.com/@robinpokorny/index-as-a-key-is-an-anti-pattern-e0349aece318]<br>
 
-만약 명시적으로 키를 지정하지 않으면 React는 기본적으로 인덱스를 키로 사용합니다.<br>
+만약 명시적으로 키를 지정하지 않으면 React 는 기본적으로 인덱스를 키로 사용합니다.<br>
 
 <br>
 
@@ -169,12 +166,10 @@ Robin Pokorny가 작성한 아티클인 in-depth explanation on the negative imp
 
 ---
 
-
 키는 바로 바깥쪽의 배열에 대해서만 의미를 가집니다.
 
-예를 들어, ListItem 컴포넌트를 추출 한 경우, 
+예를 들어, ListItem 컴포넌트를 추출 한 경우,
 ListItem 자체의 루트 `<li>` 요소가 아닌 배열의 `<ListItem />` 요소가 키를 가지고 있어야합니다.
-
 
 ```js
 // 잘못된 키 사용법의 예
@@ -183,29 +178,23 @@ function ListItem(props) {
   const value = props.value;
   return (
     // 틀렸습니다! 여기서 키를 넣어주는 것은 아무런 효과가 없습니다.
-    <li key={value.toString()}>
-      {value}
-    </li>
+    <li key={value.toString()}>{value}</li>
   );
 }
 
 function NumberList(props) {
   const numbers = props.numbers;
-  const listItems = numbers.map((number) =>
+  const listItems = numbers.map(number => (
     // 틀렸습니다! 바로 여기서 키를 넣어주어야 합니다.
     <ListItem value={number} />
-  );
-  return (
-    <ul>
-      {listItems}
-    </ul>
-  );
+  ));
+  return <ul>{listItems}</ul>;
 }
 
 const numbers = [1, 2, 3, 4, 5];
 ReactDOM.render(
   <NumberList numbers={numbers} />,
-  document.getElementById('root')
+  document.getElementById("root")
 );
 ```
 
@@ -219,23 +208,17 @@ function ListItem(props) {
 
 function NumberList(props) {
   const numbers = props.numbers;
-  const listItems = numbers.map((number) =>
+  const listItems = numbers.map(number => (
     // 맞았습니다! 바로 여기서 키를 넣어주어야 합니다.
-    <ListItem key={number.toString()}
-              value={number} />
-
-  );
-  return (
-    <ul>
-      {listItems}
-    </ul>
-  );
+    <ListItem key={number.toString()} value={number} />
+  ));
+  return <ul>{listItems}</ul>;
 }
 
 const numbers = [1, 2, 3, 4, 5];
 ReactDOM.render(
   <NumberList numbers={numbers} />,
-  document.getElementById('root')
+  document.getElementById("root")
 );
 ```
 
@@ -254,20 +237,14 @@ ReactDOM.render(
 ```js
 function Blog(props) {
   const sidebar = (
-    <ul>
-      {props.posts.map((post) =>
-        <li key={post.id}>
-          {post.title}
-        </li>
-      )}
-    </ul>
+    <ul>{props.posts.map(post => <li key={post.id}>{post.title}</li>)}</ul>
   );
-  const content = props.posts.map((post) =>
+  const content = props.posts.map(post => (
     <div key={post.id}>
       <h3>{post.title}</h3>
       <p>{post.content}</p>
     </div>
-  );
+  ));
   return (
     <div>
       {sidebar}
@@ -278,64 +255,50 @@ function Blog(props) {
 }
 
 const posts = [
-  {id: 1, title: 'Hello World', content: 'Welcome to learning React!'},
-  {id: 2, title: 'Installation', content: 'You can install React from npm.'}
+  { id: 1, title: "Hello World", content: "Welcome to learning React!" },
+  { id: 2, title: "Installation", content: "You can install React from npm." }
 ];
-ReactDOM.render(
-  <Blog posts={posts} />,
-  document.getElementById('root')
-);
+ReactDOM.render(<Blog posts={posts} />, document.getElementById("root"));
 ```
 
-키는 React에게 힌트를 제공하지만 컴포넌트로 전달되지는 않습니다.<br>
-(역주: 컴포넌트 안에서 this.props.key와 같이 가져와서 쓰는 것이 불가능)<br>
-만약 컴포넌트에 동일한 값이 필요하다면 명시적으로 다른 이름의 prop으로 전달하세요.<br>
+키는 React 에게 힌트를 제공하지만 컴포넌트로 전달되지는 않습니다.<br>
+(역주: 컴포넌트 안에서 this.props.key 와 같이 가져와서 쓰는 것이 불가능)<br>
+만약 컴포넌트에 동일한 값이 필요하다면 명시적으로 다른 이름의 prop 으로 전달하세요.<br>
 
 ```js
-const content = posts.map((post) =>
-  <Post
-    key={post.id}
-    id={post.id}
-    title={post.title} />
-);
+const content = posts.map(post => (
+  <Post key={post.id} id={post.id} title={post.title} />
+));
 ```
 
 위 예제에서 Post 컴포넌트는 props.id 를 읽을 수 있지만, props.key 는 읽을 수 없습니다.
 
 <br>
 
-## JSX에서 map() 포함하기
+## JSX 에서 map() 포함하기
 
-위 예제에서 별도의 listItems 변수를 선언하고 이를 JSX에 포함시켰습니다.
+위 예제에서 별도의 listItems 변수를 선언하고 이를 JSX 에 포함시켰습니다.
 
 ```js
 function NumberList(props) {
   const numbers = props.numbers;
-  const listItems = numbers.map((number) =>
-    <ListItem key={number.toString()}
-              value={number} />
-
-  );
-  return (
-    <ul>
-      {listItems}
-    </ul>
-  );
+  const listItems = numbers.map(number => (
+    <ListItem key={number.toString()} value={number} />
+  ));
+  return <ul>{listItems}</ul>;
 }
 ```
 
-JSX는 중괄호 안에 임의의 표현식을 포함 할 수 있기 때문에, map() 도 인라인으로 포함시킬 수 있습니다.
+JSX 는 중괄호 안에 임의의 표현식을 포함 할 수 있기 때문에, map() 도 인라인으로 포함시킬 수 있습니다.
 
 ```js
 function NumberList(props) {
   const numbers = props.numbers;
   return (
     <ul>
-      {numbers.map((number) =>
-        <ListItem key={number.toString()}
-                  value={number} />
-
-      )}
+      {numbers.map(number => (
+        <ListItem key={number.toString()} value={number} />
+      ))}
     </ul>
   );
 }
@@ -346,5 +309,6 @@ function NumberList(props) {
 map() 함수가 너무 중첩되어있다면, 컴포넌트로 추출 하는 것이 좋습니다.<br>
 
 [더 공부해보기]
+
 <!--[뱀게임(React) 코드 리뷰해보기]--!>
 <!--prop과 state 확실하게 개념잡기--!>
